--- a/package.json
+++ b/package.json
@@ -1,25 +1,29 @@
 {
-  "name": "n8n-nodes-<...>",
-  "version": "0.1.0",
-  "description": "",
+  "name": "n8n-nodes-instantly",
+  "version": "0.1.7371",
+  "description": "n8n community node for Instantly API v2",
   "keywords": [
-    "n8n-community-node-package"
+    "n8n-community-node-package",
+    "instantly",
+    "email",
+    "outreach",
+    "automation"
   ],
   "license": "MIT",
-  "homepage": "",
+  "homepage": "https://github.com/brandoncharleson/n8n-nodes-instantly",
   "author": {
-    "name": "",
-    "email": ""
+    "name": "Brandon Charleson",
+    "email": "brandon@charleson.dev"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/<...>/n8n-nodes-<...>.git"
+    "url": "git+https://github.com/brandoncharleson/n8n-nodes-instantly.git"
   },
   "engines": {
     "node": ">=18.10",
     "pnpm": ">=9.1"
   },
-  "packageManager": "pnpm@9.1.4",
+  "packageManager": "pnpm@9.1.0",
   "main": "index.js",
   "scripts": {
     "preinstall": "npx only-allow pnpm",
@@ -27,8 +31,8 @@
     "dev": "tsc --watch",
     "format": "prettier nodes credentials --write",
     "lint": "eslint nodes credentials package.json",
-    "lintfix": "eslint nodes credentials package.json --fix",
-    "prepublishOnly": "pnpm build && pnpm lint -c .eslintrc.prepublish.js nodes credentials package.json"
+    "lintfix": "eslint nodes credentials package.json --fix"
+
   },
   "files": [
     "dist"
@@ -36,12 +40,17 @@
   "n8n": {
     "n8nNodesApiVersion": 1,
     "credentials": [
-      "dist/credentials/ExampleCredentialsApi.credentials.js",
-      "dist/credentials/HttpBinApi.credentials.js"
+      "dist/credentials/InstantlyApi.credentials.js"
     ],
     "nodes": [
-      "dist/nodes/ExampleNode/ExampleNode.node.js",
-      "dist/nodes/HttpBin/HttpBin.node.js"
+      "dist/nodes/InstantlyApi/InstantlyApi.node.js",
+      "dist/nodes/Instantly/Instantly.node.js",
+      "dist/nodes/InstantlyAccount/InstantlyAccount.node.js",
+      "dist/nodes/InstantlyAnalytics/InstantlyAnalytics.node.js",
+      "dist/nodes/InstantlyCampaign/InstantlyCampaign.node.js",
+      "dist/nodes/InstantlyInbox/InstantlyInbox.node.js",
+      "dist/nodes/InstantlyLead/InstantlyLead.node.js",
+      "dist/nodes/InstantlyPlacementTest/InstantlyPlacementTest.node.js"
     ]
   },
   "devDependencies": {
@@ -49,10 +58,16 @@
     "eslint": "^8.56.0",
     "eslint-plugin-n8n-nodes-base": "^1.16.1",
     "gulp": "^4.0.2",
+    "n8n-workflow": "^1.82.0",
     "prettier": "^3.3.2",
     "typescript": "^5.5.3"
   },
   "peerDependencies": {
-    "n8n-workflow": "*"
+    "n8n-workflow": "^1.82.0"
+  },
+  "dependencies": {
+    "axios": "^1.8.4",
+    "instantly-sdk": "^0.0.1",
+    "n8n-core": "^1.14.1"
   }
 }
