--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,24 @@ dist
 npm-debug.log*
 yarn.lock
 .vscode/launch.json
+
+# Testing and development files
+*test*.md
+*testing*.md
+*development*.md
+test/
+tests/
+.cursor/
+.idea/
+
+# Environment and secrets
+.env
+.env.*
+config.json
+secrets.json
+credentials.json
+
+# Client and project specific files
+*client*.md
+*hedgestone*
+*project*.md
