fix: resolve Instantly logo/icon display issue in n8n interface
- Fix icon property syntax from object format to string format for better n8n compatibility
- Change from { light: 'file:instantly.svg', dark: 'file:instantly.svg' } to 'file:instantly.svg'
- Ensure instantly.svg file is properly copied to dist folder during build
- Update compiled JavaScript to use correct icon format
- Published as v0.1.7380 with working Instantly purple logo display
- Resolves generic 'III' icon issue in n8n node palette and workflow canvas

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,10 @@
     "outDir": "./dist",
     "strict": false,
     "noEmitOnError": false,
+    "noImplicitAny": false,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
+    "forceConsistentCasingInFileNames": false,
     "resolveJsonModule": true,
     "sourceMap": true,
     "declaration": true,
