🔧 Fix critical API parameter issues in Lead operations
- Fix campaign association: change 'campaign_id' to 'campaign' parameter per API spec
- Fix custom fields structure: nest under 'custom_variables' object instead of direct assignment
- Update both 'Create Lead' and 'Add Lead to Campaign' operations
- Ensure leads properly appear in campaigns and custom variables are stored correctly
- Bump version to 0.1.7509 and publish fixed package

Fixes:
- Leads not appearing in specified campaigns
- Custom fields not being stored in Instantly
- API compliance with Instantly v2 specification

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,11 @@
     "resolveJsonModule": true,
     "sourceMap": true,
     "declaration": true,
-    "declarationMap": true
+    "declarationMap": true,
+
+    "noImplicitReturns": false,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false
   },
   "include": [
     "nodes/**/*.ts",
