Phase 1: Critical dependency and build fixes
- Remove axios runtime dependency (main verification blocker)
- Fix TypeScript configuration to include DOM for console usage
- Add NodeConnectionType import and fix inputs/outputs
- Remove all console.log statements for production readiness
- Fix JSON syntax error in package.json
- Update tsconfig to focus on main InstantlyApi node
- Ensure package builds successfully

This addresses the primary n8n verification requirements:
✅ No runtime dependencies
✅ Package builds without errors
✅ Uses n8n's built-in HTTP helpers only

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "lib": ["ES2020"],
+    "lib": ["ES2020", "DOM"],
     "module": "commonjs",
     "moduleResolution": "node",
     "target": "ES2020",
@@ -21,7 +21,8 @@
     "noUnusedParameters": false
   },
   "include": [
-    "nodes/**/*.ts",
+    "nodes/InstantlyApi/**/*.ts",
+    "nodes/generic.functions.ts",
     "credentials/**/*.ts",
     "index.ts"
   ],
