feat: Initial implementation of InstantlyTrigger webhook node
- Created InstantlyTrigger.node.ts with comprehensive webhook event support
- Added support for all Instantly webhook events (email_sent, reply_received, etc.)
- Implemented event filtering and campaign/lead email filtering
- Added setup instructions for users to configure webhooks in Instantly UI
- Updated package.json and index.ts to include the new trigger node
- Created node codex file with proper categorization
- Follows n8n trigger node patterns from SlackTrigger and TelegramTrigger

Key features:
- Supports 18 different webhook event types
- Event filtering (can select specific events or all events)
- Campaign ID filtering (optional)
- Lead email filtering (optional)
- Comprehensive setup instructions for users
- Proper webhook lifecycle management (checkExists, create, delete)

Note: Instantly webhooks are configured through UI, not API endpoints

--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
       "dist/credentials/InstantlyApi.credentials.js"
     ],
     "nodes": [
-      "dist/nodes/Instantly/Instantly.node.js"
+      "dist/nodes/Instantly/Instantly.node.js",
+      "dist/nodes/InstantlyTrigger/InstantlyTrigger.node.js"
     ]
   },
   "devDependencies": {
