feat: Complete local testing infrastructure for InstantlyTrigger webhook node
Created comprehensive testing suite including:

🧪 Testing Scripts:
- setup-local-n8n.sh: Automated n8n development environment setup
- build-and-validate.sh: Package build and validation with fallbacks
- test-webhook-scenarios.sh: Comprehensive webhook testing (18 event types)
- run-full-test-suite.sh: Master script for complete testing workflow

📊 Test Data:
- test-payloads.json: Complete webhook payloads for all 18 Instantly events
- Realistic test data with proper timestamps and field structures
- Campaign and lead filtering test scenarios

📚 Documentation:
- TESTING_GUIDE.md: Detailed step-by-step testing instructions
- QUICK_REFERENCE.md: Quick command reference and troubleshooting
- Comprehensive troubleshooting section with common issues

🔧 Features:
- Automated n8n environment setup with package linking
- Event filtering validation (campaign ID, lead email)
- Error handling testing (malformed JSON, missing fields)
- High-priority event testing (reply_received, lead_interested, etc.)
- Performance and concurrent request testing
- Clean separation of testing files (added to .gitignore)

🎯 Testing Capabilities:
- All 18 Instantly webhook event types
- Event filtering scenarios
- Campaign and lead email filtering
- Edge cases and error handling
- High-volume testing scenarios
- Real-time webhook processing validation

Ready for comprehensive local testing of InstantlyTrigger webhook functionality.

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,13 @@ credentials.json
 *client*.md
 *hedgestone*
 *project*.md
+
+# Testing environment (keep clean for production)
+testing/
+test-environment/
+local-n8n/
+webhook-test-data/
+*.test.log
+test-results/
+coverage/
+n8n-dev-setup/
