feat: implement automated webhook management for InstantlyTrigger
- Add fully automated webhook creation/deletion via Instantly API
- Discover and implement undocumented /api/v2/campaigns/webhooks endpoints
- Add required Campaign ID parameter for webhook management
- Implement comprehensive error handling with NodeApiError
- Update documentation to reflect automated setup process
- Bump version to 0.2.0 for major enhancement
- Eliminate need for manual webhook configuration in dashboard

BREAKING CHANGE: Campaign ID parameter now required for InstantlyTrigger nodes

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,22 @@ webhook-test-data/
 test-results/
 coverage/
 n8n-dev-setup/
+
+# Local development directories (created by testing scripts)
+n8n-dev-instantly*/
+~/n8n-dev-instantly*/
+
+# npm cache and temporary files
+.npm/
+npm-cache-temp/
+*.tmp
+*.temp
+
+# Test package build artifacts (exclude from main repo)
+test-package/node_modules/
+test-package/package-lock.json
+test-package/yarn.lock
+test-package/.npm/
+
+# Generated testing instructions (temporary)
+CLOUD_TESTING_INSTRUCTIONS.md
