🔧 FIX: Resolve Community Nodes update mechanism failure
✅ CRITICAL FIX: Package structure compatibility for seamless updates
- Fixed package.json paths to match n8n-node CLI build output (dist/src/ instead of dist/)
- Added Node.js engine requirement for better compatibility
- Ensures Community Nodes update process can properly load/unload package

🎯 ROOT CAUSE: Package paths mismatch between build output and package.json
- n8n-node CLI builds to dist/src/credentials/ and dist/src/nodes/
- package.json was pointing to dist/credentials/ and dist/nodes/
- This mismatch caused 'package could not be loaded' error during updates

✅ SOLUTION: Updated package.json to correct paths:
- credentials: dist/src/credentials/InstantlyApi.credentials.js
- nodes: dist/src/nodes/InstantlyApi/InstantlyApi.node.js

🚀 IMPACT: Fixes update mechanism for 5000+ existing users
- Seamless updates through Settings > Community Nodes > Update
- No manual intervention required
- Maintains backward compatibility

Version: 0.1.7527 - Community Nodes update compatibility fix

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "n8n-nodes-instantly",
-  "version": "0.1.7526",
+  "version": "0.1.7527",
   "description": "n8n community node for Instantly API v2",
   "keywords": [
     "n8n-community-node-package",
@@ -34,11 +34,14 @@
   "n8n": {
     "n8nNodesApiVersion": 1,
     "credentials": [
-      "dist/credentials/InstantlyApi.credentials.js"
+      "dist/src/credentials/InstantlyApi.credentials.js"
     ],
     "nodes": [
-      "dist/nodes/InstantlyApi/InstantlyApi.node.js"
+      "dist/src/nodes/InstantlyApi/InstantlyApi.node.js"
     ]
+  },
+  "engines": {
+    "node": ">=18.0.0"
   },
   "devDependencies": {
     "@n8n/node-cli": "*",
