--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "n8n-nodes-instantly-dev",
-  "version": "0.2.1-alpha.1",
-  "description": "n8n community node for Instantly API v2 - TESTING VERSION with ALL 27 operations including SuperSearch Enrichment",
+  "name": "n8n-nodes-instantly-supersearch-testing",
+  "version": "0.3.0-alpha.1",
+  "description": "SUPERSEARCH TESTING VERSION - Focus on SuperSearch Enrichment operations validation - n8n community node for Instantly API v2",
   "keywords": [
     "n8n-community-node-package",
     "instantly",
     "email",
     "outreach",
     "automation",
-    "testing",
-    "api-v2",
     "supersearch",
-    "enrichment"
+    "enrichment",
+    "testing",
+    "api-v2"
   ],
   "license": "MIT",
   "homepage": "https://github.com/brandoncharleson/n8n-nodes-instantly",
@@ -30,7 +30,7 @@
     "lint": "n8n-node lint",
     "lint:fix": "n8n-node lint --fix",
     "release": "n8n-node release",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "n8n-node prerelease"
   },
   "files": [
     "dist"
@@ -50,7 +50,6 @@
   "devDependencies": {
     "@n8n/node-cli": "*",
     "eslint": "9.32.0",
-    "n8n-workflow": "^1.82.0",
     "prettier": "3.6.2",
     "release-it": "^19.0.4",
     "typescript": "5.9.2"
