--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,8 +21,8 @@
     "noUnusedParameters": false
   },
   "include": [
-    "nodes/InstantlyApi/**/*.ts",
-    "nodes/generic.functions.ts",
+    "src/nodes/InstantlyApi/**/*.ts",
+    "src/nodes/generic.functions.ts",
     "credentials/**/*.ts",
     "index.ts"
   ],
