--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "automation"
   ],
   "license": "MIT",
-  "homepage": "https://n8n.io",
+  "homepage": "https://instantly.ai",
   "author": {
     "name": "Brandon Charleson",
     "email": "brandon@instantly.ai"
